# gegl-clutter

./: AUTHORS  ChangeLog  Makefile.am  README  clutter-gegl.c  clutter-gegl.h  clutter-gegl.pc.in  configure.ac  gegl-clutter.c  gegl-clutter.doap  gegl-clutter.h
examples/: Makefile.am  parsexml.c
